// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Colors generator should generate a valid dark colors 1`] = `
Object {
  "colors": Object {
    "background": "mono-1000-value",
    "backgroundAlt": "mono-700-value",
    "backgroundInv": "mono-100-value",
    "black": "black-value",
    "border": "mono-600-value",
    "borderAlt": "mono-700-value",
    "borderError": "mono-400-value",
    "borderFocus": "mono-400-value",
    "breadcrumbsSeparatorFill": "mono-200-value",
    "breadcrumbsText": "mono-100-value",
    "buttonDisabledFill": "mono-700-value",
    "buttonDisabledText": "mono-500-value",
    "buttonMinimalActive": "mono-700-value",
    "buttonMinimalFill": "transparent",
    "buttonMinimalHover": "mono-800-value",
    "buttonMinimalText": "primary-400-value",
    "buttonPrimaryActive": "primary-700-value",
    "buttonPrimaryFill": "primary-500-value",
    "buttonPrimaryHover": "primary-600-value",
    "buttonPrimaryText": "mono-100-value",
    "buttonSecondaryActive": "mono-400-value",
    "buttonSecondaryFill": "mono-600-value",
    "buttonSecondaryHover": "mono-500-value",
    "buttonSecondaryText": "mono-100-value",
    "buttonTertiaryActive": "mono-600-value",
    "buttonTertiaryFill": "mono-800-value",
    "buttonTertiaryHover": "mono-700-value",
    "buttonTertiarySelectedFill": "primary-500-value",
    "buttonTertiarySelectedText": "mono-100-value",
    "buttonTertiaryText": "mono-100-value",
    "colorPrimary": "mono-100-value",
    "colorSecondary": "mono-200-value",
    "datepickerBackground": "mono-600-value",
    "datepickerDayFont": "white-value",
    "datepickerDayFontDisabled": "mono-100-value",
    "datepickerDayPseudoHighlighted": "mono-600-value",
    "datepickerDayPseudoSelected": "mono-500-value",
    "fileUploaderBackgroundColor": "mono-700-value",
    "fileUploaderBackgroundColorActive": "mono-600-value",
    "fileUploaderBorderColorActive": "primary-400-value",
    "fileUploaderBorderColorDefault": "mono-500-value",
    "fileUploaderMessageColor": "mono-100-value",
    "foreground": "mono-100-value",
    "foregroundAlt": "mono-300-value",
    "foregroundInv": "mono-1000-value",
    "headerNavigationFill": "mono-800-value",
    "inputFill": "mono-600-value",
    "inputFillDisabled": "mono-700-value",
    "inputFillEnhancer": "mono-500-value",
    "inputFillError": "mono-600-value",
    "inputTextDisabled": "mono-500-value",
    "linkActive": "primary-50-value",
    "linkHover": "primary-50-value",
    "linkText": "primary-300-value",
    "linkVisited": "primary-300-value",
    "listBodyFill": "mono-700-value",
    "listBorder": "mono-500-value",
    "listHeaderFill": "mono-600-value",
    "listIconFill": "mono-100-value",
    "menuFill": "mono-600-value",
    "menuFillHover": "mono-700-value",
    "menuFontDefault": "mono-300-value",
    "menuFontDisabled": "mono-400-value",
    "menuFontHighlighted": "mono-200-value",
    "menuFontSelected": "white-value",
    "mono100": "mono-100-value",
    "mono1000": "mono-1000-value",
    "mono200": "mono-200-value",
    "mono300": "mono-300-value",
    "mono400": "mono-400-value",
    "mono50": "mono-50-value",
    "mono500": "mono-500-value",
    "mono600": "mono-600-value",
    "mono700": "mono-700-value",
    "mono800": "mono-800-value",
    "mono900": "mono-900-value",
    "negative": "negative-value",
    "negative100": "negative-100-value",
    "negative1000": "negative-1000-value",
    "negative200": "negative-100-value",
    "negative300": "negative-300-value",
    "negative400": "negative-400-value",
    "negative50": "negative-50-value",
    "negative500": "negative-500-value",
    "negative600": "negative-600-value",
    "negative700": "negative-700-value",
    "negative800": "negative-800-value",
    "negative900": "negative-900-value",
    "notificationNegativeBackground": "negative-700-value",
    "notificationNegativeText": "negative-100-value",
    "notificationPositiveBackground": "positive-700-value",
    "notificationPositiveText": "positive-100-value",
    "notificationPrimaryBackground": "primary-700-value",
    "notificationPrimaryText": "primary-100-value",
    "notificationWarningBackground": "warning-700-value",
    "notificationWarningText": "warning-100-value",
    "paginationTriangleDown": "mono-100-value",
    "positive": "positive-value",
    "positive100": "positive-100-value",
    "positive1000": "positive-1000-value",
    "positive200": "positive-100-value",
    "positive300": "positive-300-value",
    "positive400": "positive-400-value",
    "positive50": "positive-50-value",
    "positive500": "positive-500-value",
    "positive600": "positive-600-value",
    "positive700": "positive-700-value",
    "positive800": "positive-800-value",
    "positive900": "positive-900-value",
    "primary": "primary-value",
    "primary100": "primary-100-value",
    "primary1000": "primary-1000-value",
    "primary200": "primary-100-value",
    "primary300": "primary-300-value",
    "primary400": "primary-400-value",
    "primary50": "primary-50-value",
    "primary500": "primary-500-value",
    "primary600": "primary-600-value",
    "primary700": "primary-700-value",
    "primary800": "primary-800-value",
    "primary900": "primary-900-value",
    "primaryFontFamily": "primary-font-family-value",
    "progressStepsIconActiveFill": "mono-100-value",
    "progressbarTrackFill": "mono-100-value",
    "rating200": "rating-200-value",
    "rating400": "rating-400-value",
    "shadowError": "rgba(229, 73, 55, 0.32)",
    "shadowFocus": "rgba(39, 110, 241, 0.32)",
    "sliderBorder": "white-value",
    "sliderBorderDisabled": "mono-400-value",
    "sliderBorderHover": "white-value",
    "sliderHandleFill": "mono-300-value",
    "sliderHandleFillActive": "mono-300-value",
    "sliderHandleFillDisabled": "mono-600-value",
    "sliderHandleFillHover": "mono-300-value",
    "sliderHandleFillSelected": "primary-500-value",
    "sliderHandleFillSelectedActive": "primary-700-value",
    "sliderHandleFillSelectedHover": "primary-600-value",
    "sliderHandleInnerFill": "mono-300-value",
    "sliderHandleInnerFillDisabled": "mono-500-value",
    "sliderHandleInnerFillSelectedActive": "primary-700-value",
    "sliderHandleInnerFillSelectedHover": "primary-600-value",
    "sliderTrackFill": "mono-600-value",
    "sliderTrackFillActive": "mono-400-value",
    "sliderTrackFillDisabled": "mono-700-value",
    "sliderTrackFillHover": "mono-500-value",
    "sliderTrackFillSelected": "primary-500-value",
    "sliderTrackFillSelectedActive": "primary-600-value",
    "sliderTrackFillSelectedHover": "primary-700-value",
    "spinnerTrackFill": "mono-100-value",
    "tabBarFill": "mono-1000-value",
    "tabColor": "mono-300-value",
    "tableBackground": "mono-800-value",
    "tableFilter": "mono-400-value",
    "tableFilterBackground": "mono-700-value",
    "tableFilterFooterBackground": "mono-800-value",
    "tableFilterHeading": "mono-300-value",
    "tableHeadBackgroundColor": "mono-700-value",
    "tagBackground": "mono-1000-value",
    "tagFontDisabledRampUnit": "500",
    "tagLightActiveRampUnit": "600",
    "tagLightDisabledRampUnit": "700",
    "tagLightFontHoverRampUnit": "100",
    "tagLightFontRampUnit": "100",
    "tagLightHoverRampUnit": "700",
    "tagLightRampUnit": "700",
    "tagNegativeBackground": "negative-500-value",
    "tagNegativeFontDisabled": "negative-500-value",
    "tagNegativeLightActive": "negative-600-value",
    "tagNegativeLightBackground": "negative-700-value",
    "tagNegativeLightDisabled": "negative-700-value",
    "tagNegativeLightFont": "negative-100-value",
    "tagNegativeLightFontHover": "negative-100-value",
    "tagNegativeLightHover": "negative-700-value",
    "tagNegativeOutlinedActive": "negative-300-value",
    "tagNegativeOutlinedBackground": "negative-500-value",
    "tagNegativeOutlinedDisabled": "negative-700-value",
    "tagNegativeOutlinedFont": "negative-100-value",
    "tagNegativeOutlinedFontHover": "negative-700-value",
    "tagNegativeOutlinedHover": "negative-400-value",
    "tagNegativeSolidActive": "negative-400-value",
    "tagNegativeSolidBackground": "negative-500-value",
    "tagNegativeSolidDisabled": "negative-700-value",
    "tagNegativeSolidFont": "negative-100-value",
    "tagNegativeSolidFontHover": "negative-100-value",
    "tagNegativeSolidHover": "negative-500-value",
    "tagNeutralBackground": "mono-600-value",
    "tagNeutralFontDisabled": "mono-500-value",
    "tagNeutralLightActive": "mono-700-value",
    "tagNeutralLightBackground": "mono-800-value",
    "tagNeutralLightDisabled": "mono-700-value",
    "tagNeutralLightFont": "mono-200-value",
    "tagNeutralLightFontHover": "mono-200-value",
    "tagNeutralLightHover": "mono-800-value",
    "tagNeutralOutlinedActive": "mono-400-value",
    "tagNeutralOutlinedBackground": "mono-600-value",
    "tagNeutralOutlinedDisabled": "mono-700-value",
    "tagNeutralOutlinedFont": "mono-200-value",
    "tagNeutralOutlinedFontHover": "mono-900-value",
    "tagNeutralOutlinedHover": "mono-500-value",
    "tagNeutralSolidActive": "mono-500-value",
    "tagNeutralSolidBackground": "mono-600-value",
    "tagNeutralSolidDisabled": "mono-700-value",
    "tagNeutralSolidFont": "mono-200-value",
    "tagNeutralSolidFontHover": "mono-200-value",
    "tagNeutralSolidHover": "mono-600-value",
    "tagOutlinedActiveRampUnit": "300",
    "tagOutlinedDisabledRampUnit": "700",
    "tagOutlinedFontHoverRampUnit": "700",
    "tagOutlinedFontRampUnit": "200",
    "tagOutlinedHoverRampUnit": "400",
    "tagOutlinedRampUnit": "500",
    "tagPositiveBackground": "positive-500-value",
    "tagPositiveFontDisabled": "positive-500-value",
    "tagPositiveLightActive": "positive-600-value",
    "tagPositiveLightBackground": "positive-700-value",
    "tagPositiveLightDisabled": "positive-700-value",
    "tagPositiveLightFont": "positive-100-value",
    "tagPositiveLightFontHover": "positive-100-value",
    "tagPositiveLightHover": "positive-700-value",
    "tagPositiveOutlinedActive": "positive-300-value",
    "tagPositiveOutlinedBackground": "positive-500-value",
    "tagPositiveOutlinedDisabled": "positive-700-value",
    "tagPositiveOutlinedFont": "positive-100-value",
    "tagPositiveOutlinedFontHover": "positive-700-value",
    "tagPositiveOutlinedHover": "positive-400-value",
    "tagPositiveSolidActive": "positive-400-value",
    "tagPositiveSolidBackground": "positive-500-value",
    "tagPositiveSolidDisabled": "positive-700-value",
    "tagPositiveSolidFont": "positive-100-value",
    "tagPositiveSolidFontHover": "positive-100-value",
    "tagPositiveSolidHover": "positive-500-value",
    "tagPrimaryBackground": "primary-500-value",
    "tagPrimaryFontDisabled": "primary-500-value",
    "tagPrimaryLightActive": "primary-600-value",
    "tagPrimaryLightBackground": "primary-700-value",
    "tagPrimaryLightDisabled": "primary-700-value",
    "tagPrimaryLightFont": "primary-100-value",
    "tagPrimaryLightFontHover": "primary-100-value",
    "tagPrimaryLightHover": "primary-700-value",
    "tagPrimaryOutlinedActive": "primary-300-value",
    "tagPrimaryOutlinedBackground": "primary-500-value",
    "tagPrimaryOutlinedDisabled": "primary-700-value",
    "tagPrimaryOutlinedFont": "primary-100-value",
    "tagPrimaryOutlinedFontHover": "primary-700-value",
    "tagPrimaryOutlinedHover": "primary-400-value",
    "tagPrimarySolidActive": "primary-400-value",
    "tagPrimarySolidBackground": "primary-500-value",
    "tagPrimarySolidDisabled": "primary-700-value",
    "tagPrimarySolidFont": "primary-100-value",
    "tagPrimarySolidFontHover": "primary-100-value",
    "tagPrimarySolidHover": "primary-500-value",
    "tagRGBGradient": "0, 0, 0",
    "tagRGBGradientSecondary": "255, 255, 255",
    "tagSolidActiveRampUnit": "400",
    "tagSolidDisabledRampUnit": "700",
    "tagSolidFontHoverRampUnit": "100",
    "tagSolidFontRampUnit": "100",
    "tagSolidHoverRampUnit": "500",
    "tagSolidRampUnit": "500",
    "tagWarningBackground": "warning-500-value",
    "tagWarningFontDisabled": "warning-500-value",
    "tagWarningLightActive": "warning-600-value",
    "tagWarningLightBackground": "warning-700-value",
    "tagWarningLightDisabled": "warning-700-value",
    "tagWarningLightFont": "warning-100-value",
    "tagWarningLightFontHover": "warning-100-value",
    "tagWarningLightHover": "warning-700-value",
    "tagWarningOutlinedActive": "warning-300-value",
    "tagWarningOutlinedBackground": "warning-500-value",
    "tagWarningOutlinedDisabled": "warning-700-value",
    "tagWarningOutlinedFont": "warning-100-value",
    "tagWarningOutlinedFontHover": "warning-700-value",
    "tagWarningOutlinedHover": "warning-400-value",
    "tagWarningSolidActive": "warning-400-value",
    "tagWarningSolidBackground": "warning-500-value",
    "tagWarningSolidDisabled": "warning-700-value",
    "tagWarningSolidFont": "warning-100-value",
    "tagWarningSolidFontHover": "warning-100-value",
    "tagWarningSolidHover": "warning-500-value",
    "tickBorder": "mono-300-value",
    "tickBorderError": "negative-400-value",
    "tickFill": "mono-1000-value",
    "tickFillActive": "mono-600-value",
    "tickFillDisabled": "mono-700-value",
    "tickFillError": "negative-700-value",
    "tickFillErrorHover": "negative-600-value",
    "tickFillErrorHoverActive": "negative-500-value",
    "tickFillErrorSelected": "negative-500-value",
    "tickFillErrorSelectedHover": "negative-600-value",
    "tickFillErrorSelectedHoverActive": "negative-700-value",
    "tickFillHover": "mono-800-value",
    "tickFillSelected": "primary-500-value",
    "tickFillSelectedHover": "primary-600-value",
    "tickFillSelectedHoverActive": "primary-700-value",
    "tickMarkFill": "mono-100-value",
    "tickMarkFillDisabled": "mono-400-value",
    "toastNegativeBackground": "negative-500-value",
    "toastPositiveBackground": "positive-500-value",
    "toastPrimaryBackground": "primary-500-value",
    "toastText": "white-value",
    "toastWarningBackground": "warning-500-value",
    "tooltipBackground": "mono-200-value",
    "tooltipText": "mono-1000-value",
    "type": "dark",
    "warning": "warning-value",
    "warning100": "warning-100-value",
    "warning1000": "warning-1000-value",
    "warning200": "warning-100-value",
    "warning300": "warning-300-value",
    "warning400": "warning-400-value",
    "warning50": "warning-50-value",
    "warning500": "warning-500-value",
    "warning600": "warning-600-value",
    "warning700": "warning-700-value",
    "warning800": "warning-800-value",
    "warning900": "warning-900-value",
    "white": "white-value",
  },
  "themed": [Function],
}
`;

exports[`Colors generator should generate a valid light colors 1`] = `
Object {
  "colors": Object {
    "background": "mono-100-value",
    "backgroundAlt": "mono-100-value",
    "backgroundInv": "mono-1000-value",
    "black": "black-value",
    "border": "mono-500-value",
    "borderAlt": "mono-600-value",
    "borderError": "negative-400-value",
    "borderFocus": "primary-400-value",
    "breadcrumbsSeparatorFill": "mono-700-value",
    "breadcrumbsText": "mono-900-value",
    "buttonDisabledFill": "mono-300-value",
    "buttonDisabledText": "mono-600-value",
    "buttonMinimalActive": "mono-400-value",
    "buttonMinimalFill": "transparent",
    "buttonMinimalHover": "mono-200-value",
    "buttonMinimalText": "primary-400-value",
    "buttonPrimaryActive": "primary-600-value",
    "buttonPrimaryFill": "primary-400-value",
    "buttonPrimaryHover": "primary-500-value",
    "buttonPrimaryText": "mono-100-value",
    "buttonSecondaryActive": "primary-100-value",
    "buttonSecondaryFill": "primary-50-value",
    "buttonSecondaryHover": "primary-100-value",
    "buttonSecondaryText": "primary-400-value",
    "buttonTertiaryActive": "mono-500-value",
    "buttonTertiaryFill": "mono-200-value",
    "buttonTertiaryHover": "mono-400-value",
    "buttonTertiarySelectedFill": "primary-400-value",
    "buttonTertiarySelectedText": "mono-100-value",
    "buttonTertiaryText": "primary-400-value",
    "colorPrimary": "mono-1000-value",
    "colorSecondary": "mono-800-value",
    "datepickerBackground": "mono-100-value",
    "datepickerDayFont": "mono-1000-value",
    "datepickerDayFontDisabled": "mono-500-value",
    "datepickerDayPseudoHighlighted": "primary-100-value",
    "datepickerDayPseudoSelected": "primary-100-value",
    "fileUploaderBackgroundColor": "mono-200-value",
    "fileUploaderBackgroundColorActive": "primary-50-value",
    "fileUploaderBorderColorActive": "primary-400-value",
    "fileUploaderBorderColorDefault": "mono-500-value",
    "fileUploaderMessageColor": "mono-600-value",
    "foreground": "mono-1000-value",
    "foregroundAlt": "mono-800-value",
    "foregroundInv": "mono-100-value",
    "headerNavigationFill": "transparent",
    "inputFill": "mono-200-value",
    "inputFillDisabled": "mono-300-value",
    "inputFillEnhancer": "mono-400-value",
    "inputFillError": "negative-50-value",
    "inputTextDisabled": "mono-600-value",
    "linkActive": "primary-600-value",
    "linkHover": "primary-600-value",
    "linkText": "primary-400-value",
    "linkVisited": "primary-500-value",
    "listBodyFill": "mono-200-value",
    "listBorder": "mono-500-value",
    "listHeaderFill": "white-value",
    "listIconFill": "mono-500-value",
    "menuFill": "mono-100-value",
    "menuFillHover": "mono-200-value",
    "menuFontDefault": "mono-800-value",
    "menuFontDisabled": "mono-500-value",
    "menuFontHighlighted": "primary-400-value",
    "menuFontSelected": "mono-1000-value",
    "mono100": "mono-100-value",
    "mono1000": "mono-1000-value",
    "mono200": "mono-200-value",
    "mono300": "mono-300-value",
    "mono400": "mono-400-value",
    "mono50": "mono-50-value",
    "mono500": "mono-500-value",
    "mono600": "mono-600-value",
    "mono700": "mono-700-value",
    "mono800": "mono-800-value",
    "mono900": "mono-900-value",
    "negative": "negative-value",
    "negative100": "negative-100-value",
    "negative1000": "negative-1000-value",
    "negative200": "negative-100-value",
    "negative300": "negative-300-value",
    "negative400": "negative-400-value",
    "negative50": "negative-50-value",
    "negative500": "negative-500-value",
    "negative600": "negative-600-value",
    "negative700": "negative-700-value",
    "negative800": "negative-800-value",
    "negative900": "negative-900-value",
    "notificationNegativeBackground": "negative-50-value",
    "notificationNegativeText": "negative-500-value",
    "notificationPositiveBackground": "positive-50-value",
    "notificationPositiveText": "positive-500-value",
    "notificationPrimaryBackground": "primary-50-value",
    "notificationPrimaryText": "primary-500-value",
    "notificationWarningBackground": "warning-50-value",
    "notificationWarningText": "warning-500-value",
    "paginationTriangleDown": "mono-800-value",
    "positive": "positive-value",
    "positive100": "positive-100-value",
    "positive1000": "positive-1000-value",
    "positive200": "positive-100-value",
    "positive300": "positive-300-value",
    "positive400": "positive-400-value",
    "positive50": "positive-50-value",
    "positive500": "positive-500-value",
    "positive600": "positive-600-value",
    "positive700": "positive-700-value",
    "positive800": "positive-800-value",
    "positive900": "positive-900-value",
    "primary": "primary-value",
    "primary100": "primary-100-value",
    "primary1000": "primary-1000-value",
    "primary200": "primary-100-value",
    "primary300": "primary-300-value",
    "primary400": "primary-400-value",
    "primary50": "primary-50-value",
    "primary500": "primary-500-value",
    "primary600": "primary-600-value",
    "primary700": "primary-700-value",
    "primary800": "primary-800-value",
    "primary900": "primary-900-value",
    "primaryFontFamily": "primary-font-family-value",
    "progressStepsIconActiveFill": "primary-100-value",
    "progressbarTrackFill": "mono-900-value",
    "rating200": "rating-200-value",
    "rating400": "rating-400-value",
    "shadowError": "rgba(229, 73, 55, 0.32)",
    "shadowFocus": "rgba(39, 110, 241, 0.32)",
    "sliderBorder": "mono-500-value",
    "sliderBorderDisabled": "mono-600-value",
    "sliderBorderHover": "primary-400-value",
    "sliderHandleFill": "white-value",
    "sliderHandleFillActive": "white-value",
    "sliderHandleFillDisabled": "mono-500-value",
    "sliderHandleFillHover": "white-value",
    "sliderHandleFillSelected": "white-value",
    "sliderHandleFillSelectedActive": "white-value",
    "sliderHandleFillSelectedHover": "white-value",
    "sliderHandleInnerFill": "mono-400-value",
    "sliderHandleInnerFillDisabled": "mono-400-value",
    "sliderHandleInnerFillSelectedActive": "primary-500-value",
    "sliderHandleInnerFillSelectedHover": "primary-400-value",
    "sliderTrackFill": "mono-400-value",
    "sliderTrackFillActive": "mono-600-value",
    "sliderTrackFillDisabled": "mono-300-value",
    "sliderTrackFillHover": "mono-500-value",
    "sliderTrackFillSelected": "primary-400-value",
    "sliderTrackFillSelectedActive": "primary-500-value",
    "sliderTrackFillSelectedHover": "primary-400-value",
    "spinnerTrackFill": "mono-900-value",
    "tabBarFill": "mono-200-value",
    "tabColor": "mono-800-value",
    "tableBackground": "mono-100-value",
    "tableFilter": "mono-600-value",
    "tableFilterBackground": "mono-100-value",
    "tableFilterFooterBackground": "mono-200-value",
    "tableFilterHeading": "mono-700-value",
    "tableHeadBackgroundColor": "mono-100-value",
    "tagBackground": "mono-100-value",
    "tagFontDisabledRampUnit": "200",
    "tagLightActiveRampUnit": "100",
    "tagLightDisabledRampUnit": "50",
    "tagLightFontHoverRampUnit": "500",
    "tagLightFontRampUnit": "500",
    "tagLightHoverRampUnit": "100",
    "tagLightRampUnit": "50",
    "tagNegativeBackground": "negative-400-value",
    "tagNegativeFontDisabled": "negative-100-value",
    "tagNegativeLightActive": "negative-100-value",
    "tagNegativeLightBackground": "negative-50-value",
    "tagNegativeLightDisabled": "negative-50-value",
    "tagNegativeLightFont": "negative-500-value",
    "tagNegativeLightFontHover": "negative-500-value",
    "tagNegativeLightHover": "negative-100-value",
    "tagNegativeOutlinedActive": "negative-600-value",
    "tagNegativeOutlinedBackground": "negative-400-value",
    "tagNegativeOutlinedDisabled": "negative-50-value",
    "tagNegativeOutlinedFont": "negative-500-value",
    "tagNegativeOutlinedFontHover": "negative-50-value",
    "tagNegativeOutlinedHover": "negative-500-value",
    "tagNegativeSolidActive": "negative-100-value",
    "tagNegativeSolidBackground": "negative-400-value",
    "tagNegativeSolidDisabled": "negative-50-value",
    "tagNegativeSolidFont": "negative-50-value",
    "tagNegativeSolidFontHover": "negative-500-value",
    "tagNegativeSolidHover": "negative-50-value",
    "tagNeutralBackground": "mono-900-value",
    "tagNeutralFontDisabled": "mono-500-value",
    "tagNeutralLightActive": "mono-400-value",
    "tagNeutralLightBackground": "mono-300-value",
    "tagNeutralLightDisabled": "mono-200-value",
    "tagNeutralLightFont": "mono-900-value",
    "tagNeutralLightFontHover": "mono-900-value",
    "tagNeutralLightHover": "mono-300-value",
    "tagNeutralOutlinedActive": "mono-900-value",
    "tagNeutralOutlinedBackground": "mono-900-value",
    "tagNeutralOutlinedDisabled": "mono-200-value",
    "tagNeutralOutlinedFont": "mono-900-value",
    "tagNeutralOutlinedFontHover": "mono-200-value",
    "tagNeutralOutlinedHover": "mono-800-value",
    "tagNeutralSolidActive": "mono-400-value",
    "tagNeutralSolidBackground": "mono-900-value",
    "tagNeutralSolidDisabled": "mono-200-value",
    "tagNeutralSolidFont": "mono-100-value",
    "tagNeutralSolidFontHover": "mono-900-value",
    "tagNeutralSolidHover": "mono-300-value",
    "tagOutlinedActiveRampUnit": "600",
    "tagOutlinedDisabledRampUnit": "50",
    "tagOutlinedFontHoverRampUnit": "50",
    "tagOutlinedFontRampUnit": "500",
    "tagOutlinedHoverRampUnit": "500",
    "tagOutlinedRampUnit": "400",
    "tagPositiveBackground": "positive-400-value",
    "tagPositiveFontDisabled": "positive-100-value",
    "tagPositiveLightActive": "positive-100-value",
    "tagPositiveLightBackground": "positive-50-value",
    "tagPositiveLightDisabled": "positive-50-value",
    "tagPositiveLightFont": "positive-500-value",
    "tagPositiveLightFontHover": "positive-500-value",
    "tagPositiveLightHover": "positive-100-value",
    "tagPositiveOutlinedActive": "positive-600-value",
    "tagPositiveOutlinedBackground": "positive-400-value",
    "tagPositiveOutlinedDisabled": "positive-50-value",
    "tagPositiveOutlinedFont": "positive-500-value",
    "tagPositiveOutlinedFontHover": "positive-50-value",
    "tagPositiveOutlinedHover": "positive-500-value",
    "tagPositiveSolidActive": "positive-100-value",
    "tagPositiveSolidBackground": "positive-400-value",
    "tagPositiveSolidDisabled": "positive-50-value",
    "tagPositiveSolidFont": "positive-50-value",
    "tagPositiveSolidFontHover": "positive-500-value",
    "tagPositiveSolidHover": "positive-50-value",
    "tagPrimaryBackground": "primary-400-value",
    "tagPrimaryFontDisabled": "primary-100-value",
    "tagPrimaryLightActive": "primary-100-value",
    "tagPrimaryLightBackground": "primary-50-value",
    "tagPrimaryLightDisabled": "primary-50-value",
    "tagPrimaryLightFont": "primary-500-value",
    "tagPrimaryLightFontHover": "primary-500-value",
    "tagPrimaryLightHover": "primary-100-value",
    "tagPrimaryOutlinedActive": "primary-600-value",
    "tagPrimaryOutlinedBackground": "primary-400-value",
    "tagPrimaryOutlinedDisabled": "primary-50-value",
    "tagPrimaryOutlinedFont": "primary-500-value",
    "tagPrimaryOutlinedFontHover": "primary-50-value",
    "tagPrimaryOutlinedHover": "primary-500-value",
    "tagPrimarySolidActive": "primary-100-value",
    "tagPrimarySolidBackground": "primary-400-value",
    "tagPrimarySolidDisabled": "primary-50-value",
    "tagPrimarySolidFont": "primary-50-value",
    "tagPrimarySolidFontHover": "primary-500-value",
    "tagPrimarySolidHover": "primary-50-value",
    "tagRGBGradient": "0, 0, 0",
    "tagRGBGradientSecondary": "255, 255, 255",
    "tagSolidActiveRampUnit": "100",
    "tagSolidDisabledRampUnit": "50",
    "tagSolidFontHoverRampUnit": "500",
    "tagSolidFontRampUnit": "50",
    "tagSolidHoverRampUnit": "50",
    "tagSolidRampUnit": "400",
    "tagWarningBackground": "warning-400-value",
    "tagWarningFontDisabled": "warning-100-value",
    "tagWarningLightActive": "warning-100-value",
    "tagWarningLightBackground": "warning-50-value",
    "tagWarningLightDisabled": "warning-50-value",
    "tagWarningLightFont": "warning-500-value",
    "tagWarningLightFontHover": "warning-500-value",
    "tagWarningLightHover": "warning-100-value",
    "tagWarningOutlinedActive": "warning-600-value",
    "tagWarningOutlinedBackground": "warning-400-value",
    "tagWarningOutlinedDisabled": "warning-50-value",
    "tagWarningOutlinedFont": "warning-500-value",
    "tagWarningOutlinedFontHover": "warning-50-value",
    "tagWarningOutlinedHover": "warning-500-value",
    "tagWarningSolidActive": "warning-100-value",
    "tagWarningSolidBackground": "warning-400-value",
    "tagWarningSolidDisabled": "warning-50-value",
    "tagWarningSolidFont": "warning-50-value",
    "tagWarningSolidFontHover": "warning-500-value",
    "tagWarningSolidHover": "warning-50-value",
    "tickBorder": "mono-700-value",
    "tickBorderError": "negative-400-value",
    "tickFill": "white-value",
    "tickFillActive": "mono-500-value",
    "tickFillDisabled": "mono-300-value",
    "tickFillError": "negative-50-value",
    "tickFillErrorHover": "negative-100-value",
    "tickFillErrorHoverActive": "negative-100-value",
    "tickFillErrorSelected": "negative-400-value",
    "tickFillErrorSelectedHover": "negative-500-value",
    "tickFillErrorSelectedHoverActive": "negative-600-value",
    "tickFillHover": "mono-400-value",
    "tickFillSelected": "primary-400-value",
    "tickFillSelectedHover": "primary-500-value",
    "tickFillSelectedHoverActive": "primary-600-value",
    "tickMarkFill": "white-value",
    "tickMarkFillDisabled": "mono-600-value",
    "toastNegativeBackground": "negative-500-value",
    "toastPositiveBackground": "positive-500-value",
    "toastPrimaryBackground": "primary-500-value",
    "toastText": "white-value",
    "toastWarningBackground": "warning-500-value",
    "tooltipBackground": "mono-900-value",
    "tooltipText": "mono-100-value",
    "type": "light",
    "warning": "warning-value",
    "warning100": "warning-100-value",
    "warning1000": "warning-1000-value",
    "warning200": "warning-100-value",
    "warning300": "warning-300-value",
    "warning400": "warning-400-value",
    "warning50": "warning-50-value",
    "warning500": "warning-500-value",
    "warning600": "warning-600-value",
    "warning700": "warning-700-value",
    "warning800": "warning-800-value",
    "warning900": "warning-900-value",
    "white": "white-value",
  },
  "themed": [Function],
}
`;

exports[`Colors generator should generate colors with fallback for optional ones 1`] = `
Object {
  "colors": Object {
    "background": "mono-100-value",
    "backgroundAlt": "mono-100-value",
    "backgroundInv": "mono-1000-value",
    "black": "black-value",
    "border": "mono-500-value",
    "borderAlt": "mono-600-value",
    "borderError": "negative-400-value",
    "borderFocus": "primary-400-value",
    "breadcrumbsSeparatorFill": "mono-700-value",
    "breadcrumbsText": "mono-900-value",
    "buttonDisabledFill": "mono-300-value",
    "buttonDisabledText": "mono-600-value",
    "buttonMinimalActive": "mono-400-value",
    "buttonMinimalFill": "transparent",
    "buttonMinimalHover": "mono-200-value",
    "buttonMinimalText": "primary-400-value",
    "buttonPrimaryActive": "primary-600-value",
    "buttonPrimaryFill": "primary-400-value",
    "buttonPrimaryHover": "primary-500-value",
    "buttonPrimaryText": "mono-100-value",
    "buttonSecondaryActive": "primary-100-value",
    "buttonSecondaryFill": "primary-50-value",
    "buttonSecondaryHover": "primary-100-value",
    "buttonSecondaryText": "primary-400-value",
    "buttonTertiaryActive": "mono-500-value",
    "buttonTertiaryFill": "mono-200-value",
    "buttonTertiaryHover": "mono-400-value",
    "buttonTertiarySelectedFill": "primary-400-value",
    "buttonTertiarySelectedText": "mono-100-value",
    "buttonTertiaryText": "primary-400-value",
    "colorPrimary": "mono-1000-value",
    "colorSecondary": "mono-800-value",
    "datepickerBackground": "mono-100-value",
    "datepickerDayFont": "mono-1000-value",
    "datepickerDayFontDisabled": "mono-500-value",
    "datepickerDayPseudoHighlighted": "primary-100-value",
    "datepickerDayPseudoSelected": "primary-100-value",
    "fileUploaderBackgroundColor": "mono-200-value",
    "fileUploaderBackgroundColorActive": "primary-50-value",
    "fileUploaderBorderColorActive": "primary-400-value",
    "fileUploaderBorderColorDefault": "mono-500-value",
    "fileUploaderMessageColor": "mono-600-value",
    "foreground": "mono-1000-value",
    "foregroundAlt": "mono-800-value",
    "foregroundInv": "mono-100-value",
    "headerNavigationFill": "transparent",
    "inputFill": "mono-200-value",
    "inputFillDisabled": "mono-300-value",
    "inputFillEnhancer": "mono-400-value",
    "inputFillError": "negative-50-value",
    "inputTextDisabled": "mono-600-value",
    "linkActive": "primary-600-value",
    "linkHover": "primary-600-value",
    "linkText": "primary-400-value",
    "linkVisited": "primary-500-value",
    "listBodyFill": "mono-200-value",
    "listBorder": "mono-500-value",
    "listHeaderFill": "white-value",
    "listIconFill": "mono-500-value",
    "menuFill": "mono-100-value",
    "menuFillHover": "mono-200-value",
    "menuFontDefault": "mono-800-value",
    "menuFontDisabled": "mono-500-value",
    "menuFontHighlighted": "primary-400-value",
    "menuFontSelected": "mono-1000-value",
    "mono100": "mono-100-value",
    "mono1000": "mono-1000-value",
    "mono200": "mono-200-value",
    "mono300": "mono-300-value",
    "mono400": "mono-400-value",
    "mono50": "mono-50-value",
    "mono500": "mono-500-value",
    "mono600": "mono-600-value",
    "mono700": "mono-700-value",
    "mono800": "mono-800-value",
    "mono900": "mono-900-value",
    "negative": "negative-value",
    "negative100": "negative-100-value",
    "negative1000": "negative-1000-value",
    "negative200": "negative-100-value",
    "negative300": "negative-300-value",
    "negative400": "negative-400-value",
    "negative50": "negative-50-value",
    "negative500": "negative-500-value",
    "negative600": "negative-600-value",
    "negative700": "negative-700-value",
    "negative800": "negative-800-value",
    "negative900": "negative-900-value",
    "notificationNegativeBackground": "negative-50-value",
    "notificationNegativeText": "negative-500-value",
    "notificationPositiveBackground": "positive-50-value",
    "notificationPositiveText": "positive-500-value",
    "notificationPrimaryBackground": "primary-50-value",
    "notificationPrimaryText": "primary-500-value",
    "notificationWarningBackground": "warning-50-value",
    "notificationWarningText": "warning-500-value",
    "paginationTriangleDown": "mono-800-value",
    "positive": "positive-value",
    "positive100": "positive-100-value",
    "positive1000": "positive-1000-value",
    "positive200": "positive-100-value",
    "positive300": "positive-300-value",
    "positive400": "positive-400-value",
    "positive50": "positive-50-value",
    "positive500": "positive-500-value",
    "positive600": "positive-600-value",
    "positive700": "positive-700-value",
    "positive800": "positive-800-value",
    "positive900": "positive-900-value",
    "primary": "primary-value",
    "primary100": "primary-100-value",
    "primary1000": "primary-1000-value",
    "primary200": "primary-100-value",
    "primary300": "primary-300-value",
    "primary400": "primary-400-value",
    "primary50": "primary-50-value",
    "primary500": "primary-500-value",
    "primary600": "primary-600-value",
    "primary700": "primary-700-value",
    "primary800": "primary-800-value",
    "primary900": "primary-900-value",
    "primaryFontFamily": "primary-font-family-value",
    "progressStepsIconActiveFill": "primary-100-value",
    "progressbarTrackFill": "mono-900-value",
    "rating200": "#FFE1A5",
    "rating400": "#FFC043",
    "shadowError": "rgba(229, 73, 55, 0.32)",
    "shadowFocus": "rgba(39, 110, 241, 0.32)",
    "sliderBorder": "mono-500-value",
    "sliderBorderDisabled": "mono-600-value",
    "sliderBorderHover": "primary-400-value",
    "sliderHandleFill": "white-value",
    "sliderHandleFillActive": "white-value",
    "sliderHandleFillDisabled": "mono-500-value",
    "sliderHandleFillHover": "white-value",
    "sliderHandleFillSelected": "white-value",
    "sliderHandleFillSelectedActive": "white-value",
    "sliderHandleFillSelectedHover": "white-value",
    "sliderHandleInnerFill": "mono-400-value",
    "sliderHandleInnerFillDisabled": "mono-400-value",
    "sliderHandleInnerFillSelectedActive": "primary-500-value",
    "sliderHandleInnerFillSelectedHover": "primary-400-value",
    "sliderTrackFill": "mono-400-value",
    "sliderTrackFillActive": "mono-600-value",
    "sliderTrackFillDisabled": "mono-300-value",
    "sliderTrackFillHover": "mono-500-value",
    "sliderTrackFillSelected": "primary-400-value",
    "sliderTrackFillSelectedActive": "primary-500-value",
    "sliderTrackFillSelectedHover": "primary-400-value",
    "spinnerTrackFill": "mono-900-value",
    "tabBarFill": "mono-200-value",
    "tabColor": "mono-800-value",
    "tableBackground": "mono-100-value",
    "tableFilter": "mono-600-value",
    "tableFilterBackground": "mono-100-value",
    "tableFilterFooterBackground": "mono-200-value",
    "tableFilterHeading": "mono-700-value",
    "tableHeadBackgroundColor": "mono-100-value",
    "tagBackground": "mono-100-value",
    "tagFontDisabledRampUnit": "200",
    "tagLightActiveRampUnit": "100",
    "tagLightDisabledRampUnit": "50",
    "tagLightFontHoverRampUnit": "500",
    "tagLightFontRampUnit": "500",
    "tagLightHoverRampUnit": "100",
    "tagLightRampUnit": "50",
    "tagNegativeBackground": "negative-400-value",
    "tagNegativeFontDisabled": "negative-100-value",
    "tagNegativeLightActive": "negative-100-value",
    "tagNegativeLightBackground": "negative-50-value",
    "tagNegativeLightDisabled": "negative-50-value",
    "tagNegativeLightFont": "negative-500-value",
    "tagNegativeLightFontHover": "negative-500-value",
    "tagNegativeLightHover": "negative-100-value",
    "tagNegativeOutlinedActive": "negative-600-value",
    "tagNegativeOutlinedBackground": "negative-400-value",
    "tagNegativeOutlinedDisabled": "negative-50-value",
    "tagNegativeOutlinedFont": "negative-500-value",
    "tagNegativeOutlinedFontHover": "negative-50-value",
    "tagNegativeOutlinedHover": "negative-500-value",
    "tagNegativeSolidActive": "negative-100-value",
    "tagNegativeSolidBackground": "negative-400-value",
    "tagNegativeSolidDisabled": "negative-50-value",
    "tagNegativeSolidFont": "negative-50-value",
    "tagNegativeSolidFontHover": "negative-500-value",
    "tagNegativeSolidHover": "negative-50-value",
    "tagNeutralBackground": "mono-900-value",
    "tagNeutralFontDisabled": "mono-500-value",
    "tagNeutralLightActive": "mono-400-value",
    "tagNeutralLightBackground": "mono-300-value",
    "tagNeutralLightDisabled": "mono-200-value",
    "tagNeutralLightFont": "mono-900-value",
    "tagNeutralLightFontHover": "mono-900-value",
    "tagNeutralLightHover": "mono-300-value",
    "tagNeutralOutlinedActive": "mono-900-value",
    "tagNeutralOutlinedBackground": "mono-900-value",
    "tagNeutralOutlinedDisabled": "mono-200-value",
    "tagNeutralOutlinedFont": "mono-900-value",
    "tagNeutralOutlinedFontHover": "mono-200-value",
    "tagNeutralOutlinedHover": "mono-800-value",
    "tagNeutralSolidActive": "mono-400-value",
    "tagNeutralSolidBackground": "mono-900-value",
    "tagNeutralSolidDisabled": "mono-200-value",
    "tagNeutralSolidFont": "mono-100-value",
    "tagNeutralSolidFontHover": "mono-900-value",
    "tagNeutralSolidHover": "mono-300-value",
    "tagOutlinedActiveRampUnit": "600",
    "tagOutlinedDisabledRampUnit": "50",
    "tagOutlinedFontHoverRampUnit": "50",
    "tagOutlinedFontRampUnit": "500",
    "tagOutlinedHoverRampUnit": "500",
    "tagOutlinedRampUnit": "400",
    "tagPositiveBackground": "positive-400-value",
    "tagPositiveFontDisabled": "positive-100-value",
    "tagPositiveLightActive": "positive-100-value",
    "tagPositiveLightBackground": "positive-50-value",
    "tagPositiveLightDisabled": "positive-50-value",
    "tagPositiveLightFont": "positive-500-value",
    "tagPositiveLightFontHover": "positive-500-value",
    "tagPositiveLightHover": "positive-100-value",
    "tagPositiveOutlinedActive": "positive-600-value",
    "tagPositiveOutlinedBackground": "positive-400-value",
    "tagPositiveOutlinedDisabled": "positive-50-value",
    "tagPositiveOutlinedFont": "positive-500-value",
    "tagPositiveOutlinedFontHover": "positive-50-value",
    "tagPositiveOutlinedHover": "positive-500-value",
    "tagPositiveSolidActive": "positive-100-value",
    "tagPositiveSolidBackground": "positive-400-value",
    "tagPositiveSolidDisabled": "positive-50-value",
    "tagPositiveSolidFont": "positive-50-value",
    "tagPositiveSolidFontHover": "positive-500-value",
    "tagPositiveSolidHover": "positive-50-value",
    "tagPrimaryBackground": "primary-400-value",
    "tagPrimaryFontDisabled": "primary-100-value",
    "tagPrimaryLightActive": "primary-100-value",
    "tagPrimaryLightBackground": "primary-50-value",
    "tagPrimaryLightDisabled": "primary-50-value",
    "tagPrimaryLightFont": "primary-500-value",
    "tagPrimaryLightFontHover": "primary-500-value",
    "tagPrimaryLightHover": "primary-100-value",
    "tagPrimaryOutlinedActive": "primary-600-value",
    "tagPrimaryOutlinedBackground": "primary-400-value",
    "tagPrimaryOutlinedDisabled": "primary-50-value",
    "tagPrimaryOutlinedFont": "primary-500-value",
    "tagPrimaryOutlinedFontHover": "primary-50-value",
    "tagPrimaryOutlinedHover": "primary-500-value",
    "tagPrimarySolidActive": "primary-100-value",
    "tagPrimarySolidBackground": "primary-400-value",
    "tagPrimarySolidDisabled": "primary-50-value",
    "tagPrimarySolidFont": "primary-50-value",
    "tagPrimarySolidFontHover": "primary-500-value",
    "tagPrimarySolidHover": "primary-50-value",
    "tagRGBGradient": "0, 0, 0",
    "tagRGBGradientSecondary": "255, 255, 255",
    "tagSolidActiveRampUnit": "100",
    "tagSolidDisabledRampUnit": "50",
    "tagSolidFontHoverRampUnit": "500",
    "tagSolidFontRampUnit": "50",
    "tagSolidHoverRampUnit": "50",
    "tagSolidRampUnit": "400",
    "tagWarningBackground": "warning-400-value",
    "tagWarningFontDisabled": "warning-100-value",
    "tagWarningLightActive": "warning-100-value",
    "tagWarningLightBackground": "warning-50-value",
    "tagWarningLightDisabled": "warning-50-value",
    "tagWarningLightFont": "warning-500-value",
    "tagWarningLightFontHover": "warning-500-value",
    "tagWarningLightHover": "warning-100-value",
    "tagWarningOutlinedActive": "warning-600-value",
    "tagWarningOutlinedBackground": "warning-400-value",
    "tagWarningOutlinedDisabled": "warning-50-value",
    "tagWarningOutlinedFont": "warning-500-value",
    "tagWarningOutlinedFontHover": "warning-50-value",
    "tagWarningOutlinedHover": "warning-500-value",
    "tagWarningSolidActive": "warning-100-value",
    "tagWarningSolidBackground": "warning-400-value",
    "tagWarningSolidDisabled": "warning-50-value",
    "tagWarningSolidFont": "warning-50-value",
    "tagWarningSolidFontHover": "warning-500-value",
    "tagWarningSolidHover": "warning-50-value",
    "tickBorder": "mono-700-value",
    "tickBorderError": "negative-400-value",
    "tickFill": "white-value",
    "tickFillActive": "mono-500-value",
    "tickFillDisabled": "mono-300-value",
    "tickFillError": "negative-50-value",
    "tickFillErrorHover": "negative-100-value",
    "tickFillErrorHoverActive": "negative-100-value",
    "tickFillErrorSelected": "negative-400-value",
    "tickFillErrorSelectedHover": "negative-500-value",
    "tickFillErrorSelectedHoverActive": "negative-600-value",
    "tickFillHover": "mono-400-value",
    "tickFillSelected": "primary-400-value",
    "tickFillSelectedHover": "primary-500-value",
    "tickFillSelectedHoverActive": "primary-600-value",
    "tickMarkFill": "white-value",
    "tickMarkFillDisabled": "mono-600-value",
    "toastNegativeBackground": "negative-500-value",
    "toastPositiveBackground": "positive-500-value",
    "toastPrimaryBackground": "primary-500-value",
    "toastText": "white-value",
    "toastWarningBackground": "warning-500-value",
    "tooltipBackground": "mono-900-value",
    "tooltipText": "mono-100-value",
    "type": "light",
    "warning": "warning-value",
    "warning100": "warning-100-value",
    "warning1000": "warning-1000-value",
    "warning200": "warning-100-value",
    "warning300": "warning-300-value",
    "warning400": "warning-400-value",
    "warning50": "warning-50-value",
    "warning500": "warning-500-value",
    "warning600": "warning-600-value",
    "warning700": "warning-700-value",
    "warning800": "warning-800-value",
    "warning900": "warning-900-value",
    "white": "white-value",
  },
  "themed": [Function],
}
`;

exports[`Colors generator should generate colors with fallback for optional ones 2`] = `
Object {
  "colors": Object {
    "background": "mono-1000-value",
    "backgroundAlt": "mono-700-value",
    "backgroundInv": "mono-100-value",
    "black": "black-value",
    "border": "mono-600-value",
    "borderAlt": "mono-700-value",
    "borderError": "mono-400-value",
    "borderFocus": "mono-400-value",
    "breadcrumbsSeparatorFill": "mono-200-value",
    "breadcrumbsText": "mono-100-value",
    "buttonDisabledFill": "mono-700-value",
    "buttonDisabledText": "mono-500-value",
    "buttonMinimalActive": "mono-700-value",
    "buttonMinimalFill": "transparent",
    "buttonMinimalHover": "mono-800-value",
    "buttonMinimalText": "primary-400-value",
    "buttonPrimaryActive": "primary-700-value",
    "buttonPrimaryFill": "primary-500-value",
    "buttonPrimaryHover": "primary-600-value",
    "buttonPrimaryText": "mono-100-value",
    "buttonSecondaryActive": "mono-400-value",
    "buttonSecondaryFill": "mono-600-value",
    "buttonSecondaryHover": "mono-500-value",
    "buttonSecondaryText": "mono-100-value",
    "buttonTertiaryActive": "mono-600-value",
    "buttonTertiaryFill": "mono-800-value",
    "buttonTertiaryHover": "mono-700-value",
    "buttonTertiarySelectedFill": "primary-500-value",
    "buttonTertiarySelectedText": "mono-100-value",
    "buttonTertiaryText": "mono-100-value",
    "colorPrimary": "mono-100-value",
    "colorSecondary": "mono-200-value",
    "datepickerBackground": "mono-600-value",
    "datepickerDayFont": "white-value",
    "datepickerDayFontDisabled": "mono-100-value",
    "datepickerDayPseudoHighlighted": "mono-600-value",
    "datepickerDayPseudoSelected": "mono-500-value",
    "fileUploaderBackgroundColor": "mono-700-value",
    "fileUploaderBackgroundColorActive": "mono-600-value",
    "fileUploaderBorderColorActive": "primary-400-value",
    "fileUploaderBorderColorDefault": "mono-500-value",
    "fileUploaderMessageColor": "mono-100-value",
    "foreground": "mono-100-value",
    "foregroundAlt": "mono-300-value",
    "foregroundInv": "mono-1000-value",
    "headerNavigationFill": "mono-800-value",
    "inputFill": "mono-600-value",
    "inputFillDisabled": "mono-700-value",
    "inputFillEnhancer": "mono-500-value",
    "inputFillError": "mono-600-value",
    "inputTextDisabled": "mono-500-value",
    "linkActive": "primary-50-value",
    "linkHover": "primary-50-value",
    "linkText": "primary-300-value",
    "linkVisited": "primary-300-value",
    "listBodyFill": "mono-700-value",
    "listBorder": "mono-500-value",
    "listHeaderFill": "mono-600-value",
    "listIconFill": "mono-100-value",
    "menuFill": "mono-600-value",
    "menuFillHover": "mono-700-value",
    "menuFontDefault": "mono-300-value",
    "menuFontDisabled": "mono-400-value",
    "menuFontHighlighted": "mono-200-value",
    "menuFontSelected": "white-value",
    "mono100": "mono-100-value",
    "mono1000": "mono-1000-value",
    "mono200": "mono-200-value",
    "mono300": "mono-300-value",
    "mono400": "mono-400-value",
    "mono50": "mono-50-value",
    "mono500": "mono-500-value",
    "mono600": "mono-600-value",
    "mono700": "mono-700-value",
    "mono800": "mono-800-value",
    "mono900": "mono-900-value",
    "negative": "negative-value",
    "negative100": "negative-100-value",
    "negative1000": "negative-1000-value",
    "negative200": "negative-100-value",
    "negative300": "negative-300-value",
    "negative400": "negative-400-value",
    "negative50": "negative-50-value",
    "negative500": "negative-500-value",
    "negative600": "negative-600-value",
    "negative700": "negative-700-value",
    "negative800": "negative-800-value",
    "negative900": "negative-900-value",
    "notificationNegativeBackground": "negative-700-value",
    "notificationNegativeText": "negative-100-value",
    "notificationPositiveBackground": "positive-700-value",
    "notificationPositiveText": "positive-100-value",
    "notificationPrimaryBackground": "primary-700-value",
    "notificationPrimaryText": "primary-100-value",
    "notificationWarningBackground": "warning-700-value",
    "notificationWarningText": "warning-100-value",
    "paginationTriangleDown": "mono-100-value",
    "positive": "positive-value",
    "positive100": "positive-100-value",
    "positive1000": "positive-1000-value",
    "positive200": "positive-100-value",
    "positive300": "positive-300-value",
    "positive400": "positive-400-value",
    "positive50": "positive-50-value",
    "positive500": "positive-500-value",
    "positive600": "positive-600-value",
    "positive700": "positive-700-value",
    "positive800": "positive-800-value",
    "positive900": "positive-900-value",
    "primary": "primary-value",
    "primary100": "primary-100-value",
    "primary1000": "primary-1000-value",
    "primary200": "primary-100-value",
    "primary300": "primary-300-value",
    "primary400": "primary-400-value",
    "primary50": "primary-50-value",
    "primary500": "primary-500-value",
    "primary600": "primary-600-value",
    "primary700": "primary-700-value",
    "primary800": "primary-800-value",
    "primary900": "primary-900-value",
    "primaryFontFamily": "primary-font-family-value",
    "progressStepsIconActiveFill": "mono-100-value",
    "progressbarTrackFill": "mono-100-value",
    "rating200": "#FFE1A5",
    "rating400": "#FFC043",
    "shadowError": "rgba(229, 73, 55, 0.32)",
    "shadowFocus": "rgba(39, 110, 241, 0.32)",
    "sliderBorder": "white-value",
    "sliderBorderDisabled": "mono-400-value",
    "sliderBorderHover": "white-value",
    "sliderHandleFill": "mono-300-value",
    "sliderHandleFillActive": "mono-300-value",
    "sliderHandleFillDisabled": "mono-600-value",
    "sliderHandleFillHover": "mono-300-value",
    "sliderHandleFillSelected": "primary-500-value",
    "sliderHandleFillSelectedActive": "primary-700-value",
    "sliderHandleFillSelectedHover": "primary-600-value",
    "sliderHandleInnerFill": "mono-300-value",
    "sliderHandleInnerFillDisabled": "mono-500-value",
    "sliderHandleInnerFillSelectedActive": "primary-700-value",
    "sliderHandleInnerFillSelectedHover": "primary-600-value",
    "sliderTrackFill": "mono-600-value",
    "sliderTrackFillActive": "mono-400-value",
    "sliderTrackFillDisabled": "mono-700-value",
    "sliderTrackFillHover": "mono-500-value",
    "sliderTrackFillSelected": "primary-500-value",
    "sliderTrackFillSelectedActive": "primary-600-value",
    "sliderTrackFillSelectedHover": "primary-700-value",
    "spinnerTrackFill": "mono-100-value",
    "tabBarFill": "mono-1000-value",
    "tabColor": "mono-300-value",
    "tableBackground": "mono-800-value",
    "tableFilter": "mono-400-value",
    "tableFilterBackground": "mono-700-value",
    "tableFilterFooterBackground": "mono-800-value",
    "tableFilterHeading": "mono-300-value",
    "tableHeadBackgroundColor": "mono-700-value",
    "tagBackground": "mono-1000-value",
    "tagFontDisabledRampUnit": "500",
    "tagLightActiveRampUnit": "600",
    "tagLightDisabledRampUnit": "700",
    "tagLightFontHoverRampUnit": "100",
    "tagLightFontRampUnit": "100",
    "tagLightHoverRampUnit": "700",
    "tagLightRampUnit": "700",
    "tagNegativeBackground": "negative-500-value",
    "tagNegativeFontDisabled": "negative-500-value",
    "tagNegativeLightActive": "negative-600-value",
    "tagNegativeLightBackground": "negative-700-value",
    "tagNegativeLightDisabled": "negative-700-value",
    "tagNegativeLightFont": "negative-100-value",
    "tagNegativeLightFontHover": "negative-100-value",
    "tagNegativeLightHover": "negative-700-value",
    "tagNegativeOutlinedActive": "negative-300-value",
    "tagNegativeOutlinedBackground": "negative-500-value",
    "tagNegativeOutlinedDisabled": "negative-700-value",
    "tagNegativeOutlinedFont": "negative-100-value",
    "tagNegativeOutlinedFontHover": "negative-700-value",
    "tagNegativeOutlinedHover": "negative-400-value",
    "tagNegativeSolidActive": "negative-400-value",
    "tagNegativeSolidBackground": "negative-500-value",
    "tagNegativeSolidDisabled": "negative-700-value",
    "tagNegativeSolidFont": "negative-100-value",
    "tagNegativeSolidFontHover": "negative-100-value",
    "tagNegativeSolidHover": "negative-500-value",
    "tagNeutralBackground": "mono-600-value",
    "tagNeutralFontDisabled": "mono-500-value",
    "tagNeutralLightActive": "mono-700-value",
    "tagNeutralLightBackground": "mono-800-value",
    "tagNeutralLightDisabled": "mono-700-value",
    "tagNeutralLightFont": "mono-200-value",
    "tagNeutralLightFontHover": "mono-200-value",
    "tagNeutralLightHover": "mono-800-value",
    "tagNeutralOutlinedActive": "mono-400-value",
    "tagNeutralOutlinedBackground": "mono-600-value",
    "tagNeutralOutlinedDisabled": "mono-700-value",
    "tagNeutralOutlinedFont": "mono-200-value",
    "tagNeutralOutlinedFontHover": "mono-900-value",
    "tagNeutralOutlinedHover": "mono-500-value",
    "tagNeutralSolidActive": "mono-500-value",
    "tagNeutralSolidBackground": "mono-600-value",
    "tagNeutralSolidDisabled": "mono-700-value",
    "tagNeutralSolidFont": "mono-200-value",
    "tagNeutralSolidFontHover": "mono-200-value",
    "tagNeutralSolidHover": "mono-600-value",
    "tagOutlinedActiveRampUnit": "300",
    "tagOutlinedDisabledRampUnit": "700",
    "tagOutlinedFontHoverRampUnit": "700",
    "tagOutlinedFontRampUnit": "200",
    "tagOutlinedHoverRampUnit": "400",
    "tagOutlinedRampUnit": "500",
    "tagPositiveBackground": "positive-500-value",
    "tagPositiveFontDisabled": "positive-500-value",
    "tagPositiveLightActive": "positive-600-value",
    "tagPositiveLightBackground": "positive-700-value",
    "tagPositiveLightDisabled": "positive-700-value",
    "tagPositiveLightFont": "positive-100-value",
    "tagPositiveLightFontHover": "positive-100-value",
    "tagPositiveLightHover": "positive-700-value",
    "tagPositiveOutlinedActive": "positive-300-value",
    "tagPositiveOutlinedBackground": "positive-500-value",
    "tagPositiveOutlinedDisabled": "positive-700-value",
    "tagPositiveOutlinedFont": "positive-100-value",
    "tagPositiveOutlinedFontHover": "positive-700-value",
    "tagPositiveOutlinedHover": "positive-400-value",
    "tagPositiveSolidActive": "positive-400-value",
    "tagPositiveSolidBackground": "positive-500-value",
    "tagPositiveSolidDisabled": "positive-700-value",
    "tagPositiveSolidFont": "positive-100-value",
    "tagPositiveSolidFontHover": "positive-100-value",
    "tagPositiveSolidHover": "positive-500-value",
    "tagPrimaryBackground": "primary-500-value",
    "tagPrimaryFontDisabled": "primary-500-value",
    "tagPrimaryLightActive": "primary-600-value",
    "tagPrimaryLightBackground": "primary-700-value",
    "tagPrimaryLightDisabled": "primary-700-value",
    "tagPrimaryLightFont": "primary-100-value",
    "tagPrimaryLightFontHover": "primary-100-value",
    "tagPrimaryLightHover": "primary-700-value",
    "tagPrimaryOutlinedActive": "primary-300-value",
    "tagPrimaryOutlinedBackground": "primary-500-value",
    "tagPrimaryOutlinedDisabled": "primary-700-value",
    "tagPrimaryOutlinedFont": "primary-100-value",
    "tagPrimaryOutlinedFontHover": "primary-700-value",
    "tagPrimaryOutlinedHover": "primary-400-value",
    "tagPrimarySolidActive": "primary-400-value",
    "tagPrimarySolidBackground": "primary-500-value",
    "tagPrimarySolidDisabled": "primary-700-value",
    "tagPrimarySolidFont": "primary-100-value",
    "tagPrimarySolidFontHover": "primary-100-value",
    "tagPrimarySolidHover": "primary-500-value",
    "tagRGBGradient": "0, 0, 0",
    "tagRGBGradientSecondary": "255, 255, 255",
    "tagSolidActiveRampUnit": "400",
    "tagSolidDisabledRampUnit": "700",
    "tagSolidFontHoverRampUnit": "100",
    "tagSolidFontRampUnit": "100",
    "tagSolidHoverRampUnit": "500",
    "tagSolidRampUnit": "500",
    "tagWarningBackground": "warning-500-value",
    "tagWarningFontDisabled": "warning-500-value",
    "tagWarningLightActive": "warning-600-value",
    "tagWarningLightBackground": "warning-700-value",
    "tagWarningLightDisabled": "warning-700-value",
    "tagWarningLightFont": "warning-100-value",
    "tagWarningLightFontHover": "warning-100-value",
    "tagWarningLightHover": "warning-700-value",
    "tagWarningOutlinedActive": "warning-300-value",
    "tagWarningOutlinedBackground": "warning-500-value",
    "tagWarningOutlinedDisabled": "warning-700-value",
    "tagWarningOutlinedFont": "warning-100-value",
    "tagWarningOutlinedFontHover": "warning-700-value",
    "tagWarningOutlinedHover": "warning-400-value",
    "tagWarningSolidActive": "warning-400-value",
    "tagWarningSolidBackground": "warning-500-value",
    "tagWarningSolidDisabled": "warning-700-value",
    "tagWarningSolidFont": "warning-100-value",
    "tagWarningSolidFontHover": "warning-100-value",
    "tagWarningSolidHover": "warning-500-value",
    "tickBorder": "mono-300-value",
    "tickBorderError": "negative-400-value",
    "tickFill": "mono-1000-value",
    "tickFillActive": "mono-600-value",
    "tickFillDisabled": "mono-700-value",
    "tickFillError": "negative-700-value",
    "tickFillErrorHover": "negative-600-value",
    "tickFillErrorHoverActive": "negative-500-value",
    "tickFillErrorSelected": "negative-500-value",
    "tickFillErrorSelectedHover": "negative-600-value",
    "tickFillErrorSelectedHoverActive": "negative-700-value",
    "tickFillHover": "mono-800-value",
    "tickFillSelected": "primary-500-value",
    "tickFillSelectedHover": "primary-600-value",
    "tickFillSelectedHoverActive": "primary-700-value",
    "tickMarkFill": "mono-100-value",
    "tickMarkFillDisabled": "mono-400-value",
    "toastNegativeBackground": "negative-500-value",
    "toastPositiveBackground": "positive-500-value",
    "toastPrimaryBackground": "primary-500-value",
    "toastText": "white-value",
    "toastWarningBackground": "warning-500-value",
    "tooltipBackground": "mono-200-value",
    "tooltipText": "mono-1000-value",
    "type": "dark",
    "warning": "warning-value",
    "warning100": "warning-100-value",
    "warning1000": "warning-1000-value",
    "warning200": "warning-100-value",
    "warning300": "warning-300-value",
    "warning400": "warning-400-value",
    "warning50": "warning-50-value",
    "warning500": "warning-500-value",
    "warning600": "warning-600-value",
    "warning700": "warning-700-value",
    "warning800": "warning-800-value",
    "warning900": "warning-900-value",
    "white": "white-value",
  },
  "themed": [Function],
}
`;
